--- a/tutorial_system_info.ui
+++ b/tutorial_system_info.ui
@@ -569,7 +569,7 @@ background: #171C29;
           <item>
            <widget class="QStackedWidget" name="stackedWidget">
             <property name="currentIndex">
-             <number>0</number>
+             <number>3</number>
             </property>
             <widget class="QWidget" name="cpu_and_memory">
              <layout class="QVBoxLayout" name="verticalLayout_4">
@@ -1098,7 +1098,7 @@ background: #171C29;
                 </property>
                 <layout class="QGridLayout" name="gridLayout_6">
                  <item row="4" column="1">
-                  <widget class="QLabel" name="label_46">
+                  <widget class="QLabel" name="system_version">
                    <property name="font">
                     <font>
                      <family>Noto Sans</family>
@@ -1132,7 +1132,7 @@ background: #171C29;
                   </widget>
                  </item>
                  <item row="1" column="0" colspan="2">
-                  <widget class="QLabel" name="label_41">
+                  <widget class="QLabel" name="system_system">
                    <property name="font">
                     <font>
                      <family>Noto Sans</family>
@@ -1186,7 +1186,7 @@ background: #171C29;
                   </widget>
                  </item>
                  <item row="7" column="1">
-                  <widget class="QLabel" name="label_47">
+                  <widget class="QLabel" name="system_date">
                    <property name="font">
                     <font>
                      <family>Noto Sans</family>
@@ -1202,7 +1202,7 @@ background: #171C29;
                   </widget>
                  </item>
                  <item row="2" column="3">
-                  <widget class="QLabel" name="label_51">
+                  <widget class="QLabel" name="system_processor">
                    <property name="font">
                     <font>
                      <family>Noto Sans</family>
@@ -1218,7 +1218,7 @@ background: #171C29;
                   </widget>
                  </item>
                  <item row="7" column="3">
-                  <widget class="QLabel" name="label_53">
+                  <widget class="QLabel" name="system_time">
                    <property name="font">
                     <font>
                      <family>Noto Sans</family>
@@ -1270,7 +1270,7 @@ background: #171C29;
                   </widget>
                  </item>
                  <item row="2" column="1">
-                  <widget class="QLabel" name="label_45">
+                  <widget class="QLabel" name="system_platform">
                    <property name="font">
                     <font>
                      <family>Noto Sans</family>
@@ -1322,7 +1322,7 @@ background: #171C29;
                   </widget>
                  </item>
                  <item row="4" column="3">
-                  <widget class="QLabel" name="label_52">
+                  <widget class="QLabel" name="system_machine">
                    <property name="font">
                     <font>
                      <family>Noto Sans</family>
@@ -1381,7 +1381,7 @@ background: #171C29;
                    </property>
                    <layout class="QHBoxLayout" name="horizontalLayout_12">
                     <item>
-                     <widget class="QLineEdit" name="lineEdit">
+                     <widget class="QLineEdit" name="activity_search">
                       <property name="styleSheet">
                        <string notr="true">color: rgb(255, 255, 255);</string>
                       </property>
@@ -1799,8 +1799,8 @@ background: #171C29;
                   <rect>
                    <x>0</x>
                    <y>0</y>
-                   <width>192</width>
-                   <height>460</height>
+                   <width>437</width>
+                   <height>471</height>
                   </rect>
                  </property>
                  <layout class="QVBoxLayout" name="verticalLayout_12">
