video 18.1 out of 20 - added sensors and network

--- a/tutorial_system_info.ui
+++ b/tutorial_system_info.ui
@@ -18,6 +18,18 @@
 border:none;
 background: #171C29;
 }
+QProgressBar{
+background-color:rgb(20,30,43);
+border-style: none;
+border-radius: 10px;
+text-align:center;
+color:rgb(255,0,0)
+}
+QProgressBar::chunk{
+background-color:qlineargradient(spread:pad,x1:0, y1:0, x2:1, y2:0, stop:0 rgba(0,136,255,255), stop:1 rgba(255,255,255,255));
+border-radius: 10px;
+
+}
 </string>
   </property>
   <widget class="QWidget" name="centralwidget">
@@ -569,7 +581,7 @@ background: #171C29;
           <item>
            <widget class="QStackedWidget" name="stackedWidget">
             <property name="currentIndex">
-             <number>4</number>
+             <number>6</number>
             </property>
             <widget class="QWidget" name="cpu_and_memory">
              <layout class="QVBoxLayout" name="verticalLayout_4">
@@ -1727,7 +1739,7 @@ background: #171C29;
                </widget>
               </item>
               <item>
-               <widget class="QTableWidget" name="tableWidget_3">
+               <widget class="QTableWidget" name="sensorTable">
                 <column>
                  <property name="text">
                   <string>SENSOR</string>
@@ -1804,8 +1816,8 @@ background: #171C29;
                   <rect>
                    <x>0</x>
                    <y>0</y>
-                   <width>437</width>
-                   <height>471</height>
+                   <width>420</width>
+                   <height>784</height>
                   </rect>
                  </property>
                  <layout class="QVBoxLayout" name="verticalLayout_12">
@@ -1852,7 +1864,13 @@ background: #171C29;
                       </widget>
                      </item>
                      <item>
-                      <widget class="QTableWidget" name="tableWidget_4">
+                      <widget class="QTableWidget" name="net_stats_table">
+                       <property name="minimumSize">
+                        <size>
+                         <width>0</width>
+                         <height>150</height>
+                        </size>
+                       </property>
                        <column>
                         <property name="text">
                          <string/>
@@ -1911,7 +1929,13 @@ background: #171C29;
                       </widget>
                      </item>
                      <item>
-                      <widget class="QTableWidget" name="tableWidget_5">
+                      <widget class="QTableWidget" name="net_io_table">
+                       <property name="minimumSize">
+                        <size>
+                         <width>0</width>
+                         <height>150</height>
+                        </size>
+                       </property>
                        <column>
                         <property name="text">
                          <string>IO</string>
@@ -1990,7 +2014,13 @@ background: #171C29;
                       </widget>
                      </item>
                      <item>
-                      <widget class="QTableWidget" name="tableWidget_6">
+                      <widget class="QTableWidget" name="net_address_table">
+                       <property name="minimumSize">
+                        <size>
+                         <width>0</width>
+                         <height>150</height>
+                        </size>
+                       </property>
                        <column>
                         <property name="text">
                          <string/>
@@ -2054,7 +2084,13 @@ background: #171C29;
                       </widget>
                      </item>
                      <item>
-                      <widget class="QTableWidget" name="tableWidget_7">
+                      <widget class="QTableWidget" name="net_connections_table">
+                       <property name="minimumSize">
+                        <size>
+                         <width>0</width>
+                         <height>150</height>
+                        </size>
+                       </property>
                        <column>
                         <property name="text">
                          <string>FD</string>
